# reed

./: .env.example  .gitignore  Commands.md  Decision_log.md  Notes.md  docker-compose-clickstack.yml  docker-compose-mp-subsystem.yml  docker-compose.yml  go.work  go.work.sum
api_gateway/: Notes.md  commands.md  go.mod  go.sum
api_gateway/api/v1/: api-gateway.yml
diagrams/message_proxy/: broadcast_mechanism_multi_client.mmd  broadcast_mechanism_single_client.mmd  sync_protocol.mmd
docker/envs/: clickstack-subsytem.env.example  mp-subsystem.env.example
docker/otel-collector-pg/: config.yaml
document_service/: .gitignore  Dockerfile  Notes.md  call_document_service.go  command.md  go.mod  go.sum
grafana/datasources/: datasources.yaml
init_scripts/: 01-init-databases.sh  02-init-tables.sh
message_proxy/: .dockerignore  .env.example  Cargo.toml  Commands.md  Dockerfile  Dockerfile.sqlx-init  build.rs  docker-compose-mp-subsystem.yml  docker-compose-sqlx.yml  mp-subsystem.env.example
message_proxy/.sqlx/: query-0a3e7a8ef1c40bd9e9517c782ac673573cc8a7790a17bc1804d9d5ffaf5b51c0.json  query-0c43278613304791303ef46dbc8282e521dc692648fad29be8cb3912bf593037.json  query-5b2bd8f335191f52825431412eacc1c016523efd1dd297fcde728b877eb8c6fb.json  query-865433accdd2e8cbebabb0af648a22f795e9bcb023e057b50b5ec8cb586bf09d.json  query-beb37c1cbddfe92c5b1c6e618288ee52de8fde94f14b2f7498c4e4ba4c1205eb.json  query-d70436dd18ce67a074eca3480473a88e177f20c8d27d3844c40d36d3cc3758e7.json  query-e19087f4864ecee6d5991511d8958e7991c27363dedb449963a144598ca9be0a.json  query-e22b255fe8b2caecdc69b60c3ed93702fb79dbf502b80e0d1b6ee418b18c79c6.json  query-fef8435ab1623a4a6d888994c7f90b6b4ca2769d1fe855f15ff33943672b7c09.json
message_proxy/migrations/: 20260417015152_init.sql  20260621055646_deletions.sql
message_proxy/src/: broker.rs  handlers.rs  lib.rs  main.rs  repository.rs  state_machine.rs
message_proxy/src/api/: operations.rs
message_proxy/src/config/: nats.rs  otel.rs  postgres.rs
message_proxy/src/handlers/: read.rs  write.rs
message_proxy/src/proto/: operations.proto
message_proxy/src/repository/: postgres.rs  query.sql  schema.sql
otel_collector/: otel-collector.yaml
prometheus/: prometheus.yml
task_specs/: 2025-11-10-tracing.md  2025-12-22-auth.md  2026-01-03-document-routes-api-gateway.md  2026-01-03-guest-tokens.md  2026-01-10-permission-crud-routes.md  2026-01-29-document-service-tracing.md  2026-01-30-document-service-logging.md  2026-02-01-document-service-metrics.md  2026-02-08-message-passing-between-connections.md  2026-02-09-message-proxy-directory-structure.md  2026-02-22-error-handling-channels.md  2026-02-24-message-proxy-filtering.md  2026-03-01-persist-messages.md  2026-03-25-crdt-poc.md  2026-03-26-tui.md  2026-04-03-state-sync.md  2026-04-26-message-proxy-observability.md  2026-04-26-mp-logging-infra.md  2026-04-27-message-proxy-containerization.md  2026-04-27-writer-sync-step-one-race.md  2026-05-03-mp-logging-instrumentation.md  2026-05-16-mp-bench.md  2026-05-20-mp-optimize-batch-op-writes.md  2026-06-16-state-vector-off-by-one-bugs.md  2026-06-19-support-deletions.md  2026-07-03-nats-core-multi-instance-mp.md  26-02-08-message-passing-between-connections.md
temp/: go.mod
user_service/: .gitignore  Dockerfile  Notes.md  call_user_service.go  commands.md  go.mod  go.sum
user_service/api/: user.pb.go  user.proto  user_grpc.pb.go
user_service/specs/: 2025-11-22-logging.md
validations/fizzbee/: brainstorming.md  document_service.fizz  document_service.json  document_service_no_queue.fizz  document_service_no_queue.json  fizz.yaml
(+61 files in other folders)
