[package]
name = "message_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-nats = "0.49.1"
axum = { version = "0.8.8", features = ["macros", "ws"] }
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures-channel = "0.3.32"
futures-util = "0.3.32"
opentelemetry = { version = "0.32", features = ["metrics"] }
opentelemetry-appender-tracing = "0.32"
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"] }
opentelemetry-stdout = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["experimental_metrics_bound_instruments"] }
rand = "0.10.1"
rand_distr = "0.6.0"
ratatui = "0.29.0"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid"] }
sqlx-tracing = { version = "0.2.1", features = ["postgres"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
trait-variant = "0.1.2"
tui-textarea = { version = "0.7.0", features = ["ratatui", "crossterm"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
yrs = "0.25.0"
